second after login

--- a/templates/dash.html
+++ b/templates/dash.html
@@ -5,9 +5,12 @@
 </head>
 <body>
 
-	<h3><a href="/login">Login</a></h3>
+<h3>{{ username }}</h3>
 
-	<h1>Home From Agro-World</h1>
+
+<a href="logout/">Logout</a>
+
+
 
 </body>
 </html>
