dashboard pages or we can say wervices

--- a/templates/dash.html
+++ b/templates/dash.html
@@ -7,8 +7,14 @@
 
 <h3>{{ username }}</h3>
 
+<ul>
+	<li><a href="/dash/marketing">Marketing Management</a></li>
+	<li><a href="/dash/sales">Sales Management</a></li>
+	<li><a href="/dash/customer">Customer Support</a></li>
+</ul>
 
-<a href="logout/">Logout</a>
+
+<a href="/logout">Logout</a>
 
 
 
